--- a/Implementierung/Implementierungsprotokoll.tex
+++ b/Implementierung/Implementierungsprotokoll.tex
@@ -90,9 +90,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Einleitung}
-Das nachfolgende Dokument spiegelt den Ablauf unserer Implementierungsphase wieder. Festgehalten wurden hauptsächlich Probleme, auf die wir, beim Implementieren gestoßen sind, wie wir diese gelöst haben und welche Änderungen wir dafür am Entwurf vornehmen mussten. Zusätzlich wird die Implementierung der Erkennungsalgorythmen beschrieben. Eine visuelle Übersicht der einzelnen Aufgaben, die bei der Implementierung entstanden sind, werden durch das beigefügt Gantt Chart repräsentiert.\\
-Insgesamt ist es uns durch durch unsere Teamarbeit gelungen alle Muss und Wunsch Kriterien umzusetzen. Wir haben es geschafft, die Bibliothek, die für die Steuerung der Earables zuständig ist, als NuGet zu veröffentlichen und bei denn Änderungen, die wir am ursprünglichen Entwurf vornehme mussten, handelt es sich zum größten Teil um Kleinigkeiten.\\
-Unser Workflow fand mit GitHub oder Auch GitKraken statt. Jeder entwickelte auf seinem Branch seine Features und machte durch ein Pull-Request kenntlich, falls seine Feature fertig war. Issues wurden hauptsächlich auf dem Papier, aber auch mündlich festgehalten. Zur Überprüfung des Codes verwendeten wir Azure Pipelines.
+Das nachfolgende Dokument spiegelt den Ablauf unserer Implementierungsphase wieder. Festgehalten wurden hauptsächlich Probleme, auf die wir beim Implementieren gestoßen sind, wie wir diese gelöst haben und welche Änderungen wir dafür am Entwurf vornehmen mussten. Zusätzlich wird die Implementierung der Erkennungsalgorithmen beschrieben. Eine visuelle Übersicht der einzelnen Aufgaben, die bei der Implementierung entstanden sind, werden durch das beigefügte Gantt Chart repräsentiert.\\
+Insgesamt ist es uns durch durch unsere Teamarbeit gelungen, alle Muss- und Wunsch-Kriterien umzusetzen. Wir haben es geschafft, die Bibliothek, die für die Steuerung der Earables zuständig ist, als NuGet zu veröffentlichen. Bei den Änderungen, die wir am ursprünglichen Entwurf vornehme mussten, handelt es sich zum größten Teil um Kleinigkeiten.\\
+Unser Workflow fand mit GitHub oder auch GitKraken statt. Jeder entwickelte auf seinem Branch seine Features und machte durch ein Pull-Request kenntlich, falls seine Feature fertig war. Issues wurden hauptsächlich auf dem Papier, aber auch mündlich festgehalten. Zur Überprüfung des Codes verwendeten wir Azure Pipelines.
 
 
 
